--- a/templates/partials/component/timer.hbs
+++ b/templates/partials/component/timer.hbs
@@ -1,23 +1,36 @@
+{{!-- 
+
+* COMPONENT: Timer 
+* @param {Bool} button - Just show timer 'start' button?
+* @param {Bool} advance_player - Button shown when timer done advances to next player's turn?
+* @param {Bool} advance - Button shown when timer done advances to next phase (ignored if 'advance_player' is true)?
+
+--}}
+
 {{#if button}}
 
   {{!-- BUTTON TO START --}}
-  <blockquote class="speech {{#ifeq decider true}}decider{{else}}player{{/ifeq}}">
+  {{!-- <blockquote class="speech {{#ifeq decider true}}decider{{else}}player{{/ifeq}}"> --}}
           {{!-- <div>{{question}}</div> --}}
     <div class="form row">
       <button data-event="game:start_timer" class="timer-button next-step submit">start</button>
     </div>
-  </blockquote>
+  {{!-- </blockquote> --}}
 
   {{!-- <div class="timer button" style="cursor:pointer" onclick="startTimer();"></div> --}}
 
 {{else}}
 
   {{!-- CIRCULAR TIMER --}}
-  <div class="speech {{#ifeq decider true}}decider{{else}}player{{/ifeq}}">
+  <div class="timer_wrap {{#ifeq decider true}}decider{{else}}player{{/ifeq}}">
     <div class="timer"></div>
     <div class="form row">
-      <button id="btn-next" data-event="{{#if advance}}game:next{{else}}game:next_screen{{/if}}" class="timer-button next-step submit" style="display:none">next</button>
-      <button id="btn-next-player" data-event="game:next_player" class="timer-buttonm submit" style="display:none">next player</button>
+      {{#if advance_player}}
+        <button id="btn-next-player" data-event="game:next_player" class="timer-button submit" style="display:none">next player</button>
+      {{else}}
+        <button id="btn-next" data-event="{{#if advance}}game:next{{else}}game:next_screen{{/if}}" class="timer-button next-step submit" style="display:none">next</button>
+      {{/if}}
+
       <span id="modifier" class="hidden-el" data-hide_next="false"></span>
     </div>
   </div>
