--- a/templates/partials/decider/pitch.hbs
+++ b/templates/partials/decider/pitch.hbs
@@ -1,84 +1,54 @@
 {{!-- PITCH PHASE UI --}}
 <div id="pitch">
 
-	{{!-- TIMER START --}}
+	{{!-- START --}}
 	<div class="screen initial">
 		
 		<section class="instruction decider">
 		</section>
 
 		<blockquote class="speech decider form">
+
       <p>"Now everyone will take turns pitching their proposal."</p>
 			
 			{{#if firstPlayer}}
-				The first player to pitch is  
+				The first player to pitch is <em>{{activePlayer.username}}</em>.
 			{{else}}
-				The next player to pitch is  
+				The next player to pitch is  <em>{{activePlayer.username}}</em>.
 			{{/if}}
 			
-			<em>{{activePlayer.username}}</em> 
-      {{!-- <button class="next-step submit" data-event="game:next_screen">next</button> --}}
-			{{> component/timer button=true}}
+      <button class="next-step submit" data-event="game:next_screen">next</button>
     </blockquote>
-
-{{!--     {{> component/instructions 
-				decider=true
-				heading=""
-				body=""
-		}}
-
-    {{> component/instructions 
-				heading=""
-				body=""
-		}}
-
-		{{> component/speech 
-				decider=true
-				body=""
-		}}
-
-		{{> component/speech 
-				body=""
-				secondary=question
-		}}  --}}
 
 	</div>
 
+	{{!-- COUNTDOWN START --}}
 	<div class="screen">
-		
-{{!-- 		<section class="instruction decider">
-			<h1>Press the button to start the timer</h1>
-			<div>Make sure everyone is ready and understands the instructions, then press the button to start the timer.</div>
-		</section> --}}
 
-		<div class="speech decider">
-			{{!-- <div>{{question}}</div> --}}
-			{{> component/timer time=config.thinkSeconds}}
-		</div>
+		{{> component/instructions
+				decider=true 
+				heading="Press the button to start the timer"
+				body="Make sure everyone is ready and understands the instructions, then press the button to start the timer."
+		}}
+		
+		{{> component/timer button=true}}
 
 	</div>
 
 	{{!-- COUNTDOWN --}}
-	<div class="screen no-transition">
-		
-		<section class="instruction decider">
-			<h1>Wait For timer to reach zero</h1>
-			<div>When the timer reaches zero shout "pencils down!"</div>
-		</section>
-		{{!-- <section class="instruction player">
-			<h1>think of a solution to the question</h1>
-			<div>Try to keep your idea concise, clear, and from your character's perspective! Be ready to pitch!</div>
-		</section> --}}
+	<div class="screen">
 
-		<div class="speech decider">
-			<div>{{question}}</div>
-			{{> component/timer time=config.pitchSeconds}}
-		</div>
-		<div class="speech player">
-			<div>{{question}}</div>
-			{{> component/timer time=config.pitchSeconds}}
-		</div>
+{{!-- 		{{> component/instructions
+				decider=true 
+				heading="Press the button to start the timer"
+				body="Make sure everyone is ready and understands the instructions, then press the button to start the timer."
+		}} --}}
+
+		{{> component/timer 
+				time=config.pitchSeconds
+				decider=true
+				advance_player=true
+		}}
 
 	</div>
-
 </div>
