Added debug function to end games at will, re-factor for loading of template data so that player-specific data may be used in shared partials, added HBS helper for generating component style classes given params used for component instantiation, added HBS helper for generating ‘next’ event ID for decider game components, refactor so timer inherits speech component, a lot of work for pitch phase.

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -283,6 +283,11 @@ input.post-button {
 	h1 {
 		font-size: 1.4em;
 	}
+
+  // Inactive player - hide this bubble
+  &.hidden {
+  	display: none;
+  }
 }
 
 // Speech bubbles
@@ -323,6 +328,11 @@ blockquote.speech {
 	    &:before {
 		    border-top: 26px solid $cerulean;
 	    }
+    }
+
+    // Inactive player - hide this bubble
+    &.hidden {
+    	display: none;
     }
 }
 .speech {
