--- a/templates/partials/component/speech.hbs
+++ b/templates/partials/component/speech.hbs
@@ -3,19 +3,22 @@
 * COMPONENT: Speech Bubble 
 * @param {Bool} decider - Is decider speech?
 * @param {Bool} advance - Is last bubble of phase?
+* @param {Bool} timer - 'Next' button kicks off a timer?
+* @param {Bool} active_player - Show this speech only for active player?
+* @param {Bool} inactive_player - Show this speech only for inactive player?
 * @param {String} body - Speech bubble body text
 * @param {String} secondary - Speech bubble secondary text, showing under body
 
 --}}
+	<blockquote class="speech {{showHide this}} {{#ifeq decider true}}form{{/ifeq}}">
 
-<blockquote class="speech {{#ifeq decider true}}decider form{{else}}player{{/ifeq}}">
-  <p>"{{body}}"</p>
+	  <p>"{{body}}"</p>
 
-  {{#if secondary}}
-	  <div>{{secondary}}</div>
-  {{/if}}
-  
-  {{#ifeq decider true}}
-    <button class="next-step submit" data-event="{{#ifeq advance true}}game:next{{else}}game:next_screen{{/ifeq}}">next</button>
-  {{/ifeq}}
-</blockquote>
+	  {{#if secondary}}
+		  <div>{{secondary}}</div>
+	  {{/if}}
+	  
+	  {{#ifeq decider true}}
+	    <button class="next-step submit" data-event="{{nextEvent this}}">next</button>
+	  {{/ifeq}}
+	</blockquote>
