--- a/templates/partials/component/timer.hbs
+++ b/templates/partials/component/timer.hbs
@@ -4,26 +4,35 @@
 * @param {Bool} button - Just show timer 'start' button?
 * @param {Bool} advance_player - Button shown when timer done advances to next player's turn?
 * @param {Bool} advance - Button shown when timer done advances to next phase (ignored if 'advance_player' is true)?
+* @param {Bool} active_player - Show this speech only for active player?
+* @param {Bool} inactive_player - Show this speech only for inactive player?
+* @param {String} body - Speech bubble body text for when 'button' is true
 
 --}}
 
-{{#if button}}
+{{#ifeq button true}}
 
-  {{!-- BUTTON TO START --}}
-  {{!-- <blockquote class="speech {{#ifeq decider true}}decider{{else}}player{{/ifeq}}"> --}}
-          {{!-- <div>{{question}}</div> --}}
-    <div class="form row">
-      <button data-event="game:start_timer" class="timer-button next-step submit">start</button>
-    </div>
-  {{!-- </blockquote> --}}
-
-  {{!-- <div class="timer button" style="cursor:pointer" onclick="startTimer();"></div> --}}
+  {{!-- SPEECH W/ BUTTON TO START --}}
+  {{> component/speech
+      body=body
+      decider=true
+      timer=true
+  }}
 
 {{else}}
 
+{{{jsonPrint this}}}
+
   {{!-- CIRCULAR TIMER --}}
   <div class="timer_wrap {{#ifeq decider true}}decider{{else}}player{{/ifeq}}">
-    <div class="timer"></div>
+    {{#ifeq preview true}} 
+      {{#ifeq active_player true}}
+        <div class="timer preview" data-duration="{{time}}"></div>
+      {{/ifeq}}
+    {{else}}
+        <div class="timer"></div>
+    {{/ifeq}}
+
     <div class="form row">
       {{#if advance_player}}
         <button id="btn-next-player" data-event="game:next_player" class="timer-button submit" style="display:none">next player</button>
@@ -35,4 +44,4 @@
     </div>
   </div>
 
-{{/if}}
+{{/ifeq}}
