--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -28,16 +28,6 @@ var resetSession = function() {
 
 }
 
-var getScript = function (gameType) {
-    $.getScript( '/js/events/' + gameType + '.js' )
-        .done(function( script, textStatus ) {
-            console.log( textStatus );
-          })
-          .fail(function( jqxhr, settings, exception ) {
-            console.error('Unable to load %s (error: "%s")', gameType + '.js', exception);
-        });
-}
-
 var setupTriggers = function() {
 
     // Add trigger to go to next step on next-step buttons
@@ -360,29 +350,23 @@ socketEvents = function(eventId, eventData) {
                         clearInterval(clockInterval);
                 }, 1000);
 
-                // var hasTimer = $($('.screen')[0]).find('.timer').length > 0;
-
-                // if(hasTimer) {
-                    var countdownAnim = new ProgressBar.Circle(
-                      '.screen .timer', 
-                      {
-                          color: '#fff',
-                          duration: secondsLeft*1000,
-                          easing: 'easeInOut',
-                          strokeWidth: 6,
-                          trailColor: '#999',
-                          trailWidth: 0.8,
-                          fill: '#555',
-                          from: { color: '#999', width: 4 },
-                          to: { color: '#999', width: 4 },
-                          // Set default step function for all animate calls
-                          step: function(state, circle) {
-                              circle.setText(secondsLeft);
-                          }
+                var countdownAnim = new ProgressBar.Circle(
+                  '.screen .timer', 
+                  {
+                      color: '#fff',
+                      duration: secondsLeft*1000,
+                      easing: 'easeInOut',
+                      strokeWidth: 6,
+                      trailColor: 'rbga(235, 235, 235, 0.5)',
+                      trailWidth: 0.8,
+                      fill: '#20b5e6',
+                      // Set default step function for all animate calls
+                      step: function(state, circle) {
+                          circle.setText(secondsLeft);
                       }
-                    );
-                    countdownAnim.animate(1);
-                // }
+                  }
+                );
+                countdownAnim.animate(1);
 
             break;
 
