--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -7,7 +7,7 @@
 * ==========
 */
 --}}
-<div class="siteLanding" id="homepage">
+<div class="siteLanding" id="homepage" lang="en">
   <div class="row top">
     {{!-- TOP SECTION/LANDING --}}
     <div class="top-section">
