Fixes for showing/hiding elements depending on if current client is active player or not, fixes for advancing to next phase vs. just refreshing current one at restart point w/ new data, timer fixes. Basic implementation of new pitch phase.

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -357,7 +357,11 @@ blockquote.speech {
 	    border-bottom: 5px solid transparent;
 	  }
   }
+}
 
+// Choice box
+.choice {
+	
 }
 
 // BOTTOM BAR (COINS, NEXT)
