--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -11,6 +11,7 @@
 --}}
 
 var clockInterval;
+var countdownAnim;
 var playerWasReconnected;
 var startAnim = new TimelineLite({paused: true}).fromTo($('#btn-start-game'), 1, {scale:0, autoAlpha:0}, {scale:1, autoAlpha:1, visibility:'visible', ease:Elastic.easeOut});
 
@@ -290,6 +291,10 @@ socketEvents = function(eventId, eventData) {
 
                 setupTriggers();
 
+                // Move immediately to restart point in current phase, by removing screens before it and showing it
+                $('.screen.restart').prevAll().remove();
+                $('.screen.restart').show();
+
             });
 
             break;
@@ -333,40 +338,40 @@ socketEvents = function(eventId, eventData) {
             if(clockInterval)
                 clearInterval(clockInterval);
 
-                var secondsLeft = eventData.duration;
-                var timeFactor = 360 / secondsLeft;
-                var clockHand = $('#clock-hand');
-                    
-                clockInterval = setInterval(function() {
+            if(countdownAnim)
+                countdownAnim.destroy();
 
-                    function clockTick() {
-                        $('#countdown').text(secondsLeft + ' seconds');
-                        secondsLeft--;
-                    }
+            var secondsLeft = eventData.duration;                    
+            clockInterval = setInterval(function() {
 
-                    clockTick();
+                function clockTick() {
+                    $('#countdown').text(secondsLeft + ' seconds');
+                    secondsLeft--;
+                }
 
-                    if(secondsLeft === 0)
-                        clearInterval(clockInterval);
-                }, 1000);
+                clockTick();
 
-                var countdownAnim = new ProgressBar.Circle(
-                  '.screen .timer', 
-                  {
-                      color: '#fff',
-                      duration: secondsLeft*1000,
-                      easing: 'easeInOut',
-                      strokeWidth: 6,
-                      trailColor: 'rbga(235, 235, 235, 0.5)',
-                      trailWidth: 0.8,
-                      fill: '#20b5e6',
-                      // Set default step function for all animate calls
-                      step: function(state, circle) {
-                          circle.setText(secondsLeft);
-                      }
+                if(secondsLeft === 0)
+                    clearInterval(clockInterval);
+            }, 1000);
+            
+            countdownAnim = new ProgressBar.Circle(
+              '.screen .timer', 
+              {
+                  color: '#fff',
+                  duration: secondsLeft*1000,
+                  easing: 'easeInOut',
+                  strokeWidth: 6,
+                  trailColor: 'rbga(235, 235, 235, 0.5)',
+                  trailWidth: 0.8,
+                  fill: '#20b5e6',
+                  // Set default step function for all animate calls
+                  step: function(state, circle) {
+                      circle.setText(secondsLeft);
                   }
-                );
-                countdownAnim.animate(1);
+              }
+            );
+            countdownAnim.animate(1);
 
             break;
 
