--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -139,8 +139,8 @@
                         <button id="btn-menu">menu</button>
                     </div>
                     <div id="currency" class="col-sm-6 col-xs-6">
-                        <div id="pot-coins"><p>coin pot</p> {{{cloudinaryUrl "v1486743650/at-stake/layout/pot_stroke.png" width=60}}} <span></span></div>
-                        <div id="player-coins"><p>your coins</p> {{{cloudinaryUrl "v1486743650/at-stake/layout/coin_stroke.png" width=60}}} <span></span></div>
+                        <div id="pot-coins"><p>coin pot</p>  <span></span></div>
+                        <div id="player-coins" style="background-image:{{{cloudinaryUrl 'v1486743650/at-stake/layout/coin_stroke.png' width=60}}}"><p>your coins</p>  <span></span></div>
                     </div>
                     
                 </footer>
