--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -55,7 +55,7 @@ $nav-height-thin: 25px;
 
 /* HOMEPAGE */
 
-$color-turquoise: #1EB4BB;
+// $color-turquoise: #1EB4BB;
 $color-seafoam: #00D6B4;
 $color-orange: #febb2c;
 $color-pink: #fd2c76;
