--- a/templates/partials/player/pitch.hbs
+++ b/templates/partials/player/pitch.hbs
@@ -29,11 +29,12 @@
     {{!-- MORE TIME SCREEN SHOWS AT END OF COUNTDOWN --}}
     {{#if isActive}}
       
-      <div class="form row" id="more-time" style="display:none">
+      {{>component/choice this}}
+      {{!-- <div class="form row" id="more-time" style="display:none">
         <h3>Need more time? Pay {{config.extraTimeCost}} coins for {{config.extraSeconds}} more seconds.</h3>
         <button id="btn-more-time" data-event="game:more_time" data-keep_enabled="true" data-package="{{../playerUid}}" class="post-button submit" type="submit" name="submit">more time</button>
         <button id="btn-cancel" data-event="game:turn_done" class="post-button submit" type="submit" name="submit">no thanks</button>
-      </div>
+      </div> --}}
 
     {{/if}}
 
