--- a/templates/partials/decider/decks.hbs
+++ b/templates/partials/decider/decks.hbs
@@ -32,7 +32,7 @@
           <h3 class="flag sub-header">Sample Stakeholders</h3>
           <div class="stakeholders">
             {{#each roles}}
-              <span class="deck-role">{{title}}</span>
+              <div class="deck-role col-xs-6">{{title}}</div>
 
               {{#ifeq @index 2}}</div><div class="stakeholders">{{/ifeq}}              
             {{/each}}
