Created logic for pausing/resuming timers before/after player is reconnected to game.

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -206,9 +206,9 @@ input.post-button {
 }
 
 // More Time Card
-.form.choices.player.ACTIVE {
-	background-color: $
-}
+// .form.choices.player.ACTIVE {
+// 	background-color: $
+// }
 
 // Player role card
 #role-card {
