--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -12,6 +12,7 @@
 
 var clockInterval;
 var countdownAnim;
+var countdownPaused;
 var playerWasReconnected;
 var startAnim = new TimelineLite({paused: true}).fromTo($('#btn-start-game'), 1, {scale:0, autoAlpha:0}, {scale:1, autoAlpha:1, visibility:'visible', ease:Elastic.easeOut});
 
@@ -26,6 +27,56 @@ var resetSession = function() {
     sessionStorage.removeItem('gameCode');
     sessionStorage.removeItem('uUID');
     sessionStorage.setItem('reconnected', false);
+
+}
+
+var startTimer = function(secondsLeft) {
+    
+    var wasPaused = false;
+
+    clockInterval = setInterval(function() {
+
+        function clockTick() {
+            $('#countdown').text(secondsLeft + ' seconds');
+            secondsLeft--;
+        }
+            
+        // Resume timer UI if timer paused due to player disconnect
+        if(!countdownPaused && wasPaused)
+            countdownAnim.animate(1, {duration: secondsLeft*1000});
+
+        wasPaused = countdownPaused;
+
+        // If timer paused, stop UI animation and bail
+        if(countdownPaused) { 
+            countdownAnim.stop(); 
+            return;
+        }
+
+        clockTick();
+
+        if(secondsLeft === 0)
+            clearInterval(clockInterval);
+
+    }, 1000);
+    
+    countdownAnim = new ProgressBar.Circle(
+      '.screen .timer', 
+      {
+          color: '#fff',
+          duration: secondsLeft*1000,
+          easing: 'easeInOut',
+          strokeWidth: 6,
+          trailColor: 'rbga(235, 235, 235, 0.5)',
+          trailWidth: 0.8,
+          fill: '#20b5e6',
+          // Set default step function for all animate calls
+          step: function(state, circle) {
+            circle.setText(secondsLeft);
+          }
+      }
+    );
+    countdownAnim.animate(1);
 
 }
 
@@ -138,6 +189,8 @@ socketEvents = function(eventId, eventData) {
             // Set local player state as reconnected
             playerWasReconnected = true;
 
+            isDecider = eventData.is_decider;
+
             var markup = sessionStorage.getItem('markup');
             markup = $(markup).not('blockquote.speech.under');
 
@@ -145,6 +198,9 @@ socketEvents = function(eventId, eventData) {
             $('#gameContent').html(markup).promise().done(function() {
                 
                 setupTriggers();
+
+                var secondsLeft = eventData.resume_duration; 
+                startTimer(secondsLeft);
 
             });
 
@@ -159,6 +215,8 @@ socketEvents = function(eventId, eventData) {
             modal.find('h2 #player').text(eventData.name);
             modal.find('h2 #time').text(timeLeft + 's');
             modal.show();
+
+            countdownPaused = true;
 
             var timeoutClock = setInterval(function() {
 
@@ -176,6 +234,8 @@ socketEvents = function(eventId, eventData) {
 
             if(eventData.state === 'rejoined') {
                 $('#error-player-disconnected').hide();
+
+                countdownPaused = false;
                 return;
             }
 
@@ -234,14 +294,12 @@ socketEvents = function(eventId, eventData) {
 
             $('#role-card').html(eventData);
             $('#btn-close-role-card').on('click', function(evt) {
-                console.log("closing");
                 $('#role-card').removeClass('open').addClass('closed');
             });
             $('#btn-role-card').on('click', function(evt) {
                 $('#role-card').removeClass('closed').addClass('open');
             });
             $('#role-card').on('swipe', function() {
-                console.log("closing");
                 $('#role-card').removeClass('open').addClass('closed');
             });
 
@@ -335,43 +393,16 @@ socketEvents = function(eventId, eventData) {
 
             $('#btn-time').fadeOut();
 
+            countdownPaused = false;
+
             if(clockInterval)
                 clearInterval(clockInterval);
 
             if(countdownAnim)
                 countdownAnim.destroy();
-
-            var secondsLeft = eventData.duration;                    
-            clockInterval = setInterval(function() {
-
-                function clockTick() {
-                    $('#countdown').text(secondsLeft + ' seconds');
-                    secondsLeft--;
-                }
-
-                clockTick();
-
-                if(secondsLeft === 0)
-                    clearInterval(clockInterval);
-            }, 1000);
-            
-            countdownAnim = new ProgressBar.Circle(
-              '.screen .timer', 
-              {
-                  color: '#fff',
-                  duration: secondsLeft*1000,
-                  easing: 'easeInOut',
-                  strokeWidth: 6,
-                  trailColor: 'rbga(235, 235, 235, 0.5)',
-                  trailWidth: 0.8,
-                  fill: '#20b5e6',
-                  // Set default step function for all animate calls
-                  step: function(state, circle) {
-                      circle.setText(secondsLeft);
-                  }
-              }
-            );
-            countdownAnim.animate(1);
+                   
+            var secondsLeft = eventData.duration; 
+            startTimer(secondsLeft);
 
             break;
 
